--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
                 <artifactId>json</artifactId>
                 <version>20240303</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.10.1</version> <!-- Use latest stable version -->
+            </dependency>
         </dependencies>
 </project>
