--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,11 @@
                 <artifactId>gson</artifactId>
                 <version>2.10.1</version> <!-- Use latest stable version -->
             </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.8.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
 </project>
